--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,7 @@ doctype html
 html
 	head
 		title My App
+		link(rel='stylesheet' href='/lib/bootstrap/dist/css/bootstrap.min.css')
 	body
 		.container
 			h1 Gimme all your pug
